[package]
name = "advent_of_code"
version = "0.9.2"
authors = ["Felix Spöttel <1682504+fspoettel@users.noreply.github.com>"]
edition = "2021"
default-run = "advent_of_code"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[features]
test_lib = []

[dependencies]
pico-args = "0.5.0"
nom = "8.0.0"
itertools = "0.14.0"
tinyvec = { version = "1.10.0", features = ["alloc"] }
hashlink = "0.11.0"
rstar = "0.12.2"
num-traits = "0.2.19"
ordered-float = "5.1.0"
strum = { version = "0.27.2", features = ["derive"] }
rand = "0.9.2"
priority-queue = "2.7.0"
regex = "1.12.2"
i_key_sort = "0.10.1"
